--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ hr.rainbow2{
 
 }
 
-#root .MuiTableRow-root-87 .MuiTableCell-root-92 > div:hover {
+#root .token:hover {
   -webkit-animation: rotate-vert-center 0.75s cubic-bezier(0.770, 0.000, 0.175, 1.000) both;
           animation: rotate-vert-center 0.75s cubic-bezier(0.770, 0.000, 0.175, 1.000) both;
 }
