--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html {
   margin: 0;
   padding: 0;
-  /* height: 100%; */
+  height: 100%;
   min-height: 100%;
   background: url('./static/img/rainbow_background_2-wallpaper-2560x1600.jpg');
   background-repeat: no-repeat;
@@ -12,7 +12,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  /* height: 100%; */
+  height: 100%;
   /* min-height: 100%; */
   font-family: sans-serif;
 }
@@ -20,13 +20,17 @@ body {
 #root {
   margin: 0;
   padding: 0;
-  /* height: 100%;
-  min-height: 100%; */
+  height: 100%;
+  /* min-height: 100%; */
 }
 
 .App {
-  /* height: 100%;
-  min-height: 100%; */
+  height: 100%;
+  /* min-height: 100%; */
+}
+
+#initializer-handler {
+  height: 100%;
 }
 
 /* LOADER */
