--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,36 @@
 html {
   margin: 0;
   padding: 0;
+  min-height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
   height: 100%;
   min-height: 100%;
   background: url('./static/img/rainbow_background_2-wallpaper-2560x1600.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  min-width: 1000px;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  /* min-height: 100%; */
-  font-family: sans-serif;
 }
 
 #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  /* min-height: 100%; */
+  min-height: 100%;
 }
 
 .App {
   height: 100%;
-  /* min-height: 100%; */
+  min-height: 100%;
 }
 
 #initializer-handler {
   height: 100%;
+  min-height: 100%;
 }
 
 /* BLOCKNUMBER LOADER */
